--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,7 +2,7 @@
   <h1>Contact Us</h1>
   <p>If you have questions or need support, reach out:</p>
   <ul>
-    <li>Email: t2ydtransport@gmail.com</li>
+    <li>Email: workconnect@gmail.com</li>
 
   </ul>
 </section>
