--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -128,7 +128,7 @@
         <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
       </ul>
       <div class="copyright">
-        <p>&copy; 2025 T2YD. All rights reserved.</p>
+        <p>&copy; 2025 WorkConnect. All rights reserved.</p>
       </div>
     </div>
   </footer>
