--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <div class="container mx-auto py-10 px-6">
   <h1 class="text-3xl font-bold mb-6">Privacy Policy</h1>
@@ -38,4 +38,7 @@
 
   <h2 class="text-xl font-semibold mt-6 mb-2">7. Policy Updates</h2>
   <p>This Privacy Policy may be updated periodically. We encourage you to review it regularly.</p>
-</div>
+</div> -->
+
+
+  <h1 class="text-3xl font-bold mb-6">Privacy Policy</h1>
